Fix jar run thing